Add database connection and file upload logic

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:setup": "node scripts/setup-database.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.3",
     "@vercel/blob": "^1.1.1",
     "@vercel/postgres": "^0.10.0",
     "next": "15.3.5",
@@ -24,4 +25,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    
+    "tailwindcss": "^4",
+    "typescript": "^5"
+  }
+}
